# game-of-life-c

./: CMakeLists.txt  README.md  config.ini  main.cpp
